--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://media.gettyimages.com/id/92531746/photo/elephant.jpg?s=612x612&w=0&k=20&c=FPZM6smv2bBS2VJreWaxJeEBckcJAgOelkNoDM-5HSM=">
+    <img src="https://media.gettyimages.com/id/92531746/photo/elephant.jpg"
+         alt="elephant - elephant stock pictures, royalty-free photos & images">
+    <img src="https://media.gettyimages.com/id/92531746/photo/elephant.jpg?s=612x612&w=0&k=20&c=FPZM6smv2bBS2VJreWaxJeEBckcJAgOelkNoDM-5HSM="
+         alt="elephant - elephant stock pictures, royalty-free photos & images" 
+         title="Image of an elephant" >
   </body>
 </html>
